Fix nav bar z-index

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -22,6 +22,7 @@
     display: flex;
     color: #262626;
     border-bottom: 1px solid rgb(219, 219, 219);
+    z-index: -2;
 }
 
 #user-avatar-container {
