--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -8,7 +8,6 @@
     border-bottom: 1px solid rgb(219, 219, 219);
     position: fixed;
     top: 0;
-    z-index: 100;
 }
 
 #nav-bar {
